--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="vh-100 d-flex flex-column">
     <header class="container-fluid">
-        <img class="img-fluid" src="/assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
+        <img class="img-fluid" src="./assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
     </header>
     <main class="container mt-5">
         <h1>A exposição não começou ainda. Volte a partir do dia 29 de Janeiro para ver as obras.</h1>
