Carousel and Grid together

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -14,56 +14,113 @@
         <img class="img-fluid" src="../assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
     </header>
     <main class="mt-5 container">
+        <!-- Card grid -->
         <div class="card-columns">
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra01.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">A Neca da Boneca</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra02.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra02.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Retificada</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra03.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra03.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Além das Amarras</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra04.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra04.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Olhar de Retorno</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra05.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra05.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">TODAFEITAELAÉPERFEITA?</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra06.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra06.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Aquendada</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra07.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra07.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Balaio de Bubu</h5>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra08.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../assets/images/obra08.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Anatomicamente Estigmatizada</h5>
                 </div>
             </div>
         </div>
+        <!-- /Card grid -->
+        <!-- Carousel -->
+        <div id="galeryCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Aqui pode ficar um texto</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra02.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra03.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra04.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra05.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra06.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra07.png" alt="Card image cap">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/obra08.png" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#galeryCarousel" role="button" data-bs-slide="prev"></a>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#galeryCarousel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+        <!-- /Carousel -->
     </main>
     <footer class="container mt-auto">
         <!--Patrocínios -->
