Fix carousel control icons

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/index.css">
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container">
         <img class="img-fluid" src="../assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
     </header>
     <main class="mt-5 container">
@@ -18,51 +18,27 @@
         <div class="card-columns">
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">A Neca da Boneca</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra02.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Retificada</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra03.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Além das Amarras</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra04.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Olhar de Retorno</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra05.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">TODAFEITAELAÉPERFEITA?</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra06.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Aquendada</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra07.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Balaio de Bubu</h5>
-                </div>
             </div>
             <div class="card">
                 <img class="card-img-top" src="../assets/images/obra08.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Anatomicamente Estigmatizada</h5>
-                </div>
             </div>
         </div>
         <!-- /Card grid -->
@@ -72,9 +48,6 @@
                 <div class="carousel-item active">
                     <div class="card">
                         <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Aqui pode ficar um texto</h5>
-                        </div>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -113,9 +86,9 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#galeryCarousel" role="button" data-bs-slide="prev"></a>
+            <!-- <a class="carousel-control-prev" href="#galeryCarousel" role="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a>
+            </a> -->
             <a class="carousel-control-next" href="#galeryCarousel" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </a>
