Link images to their respective pages

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -17,78 +17,90 @@
         <!-- Card grid -->
         <div class="card-columns">
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
+                <a href="../obras/1/index.html"><img class="card-img-top" src="../assets/images/obra01.png" alt="Primeira obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra02.png" alt="Card image cap">
+                <a href="../obras/2/index.html"><img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra03.png" alt="Card image cap">
+                <a href="../obras/3/index.html"><img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra04.png" alt="Card image cap">
+                <a href="../obras/4/index.html"><img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra05.png" alt="Card image cap">
+                <a href="../obras/5/index.html"><img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra06.png" alt="Card image cap">
+                <a href="../obras/6/index.html"><img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra07.png" alt="Card image cap">
+                <a href="../obras/7/index.html"><img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição"></a>
             </div>
             <div class="card">
-                <img class="card-img-top" src="../assets/images/obra08.png" alt="Card image cap">
-            </div>
+                <a href="../obras/8/index.html"><img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição"></a>            </div>
         </div>
         <!-- /Card grid -->
         <!-- Carousel -->
         <div id="galeryCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra01.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/1/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra01.png" alt="Primeira obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra02.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/2/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra03.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/3/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra04.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/4/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra05.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/5/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra06.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/6/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra07.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/7/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição">
+                        </div>
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <div class="card">
-                        <img class="card-img-top" src="../assets/images/obra08.png" alt="Card image cap">
-                    </div>
+                    <a href="../obras/8/index.html">
+                        <div class="card">
+                            <img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição">
+                        </div>
+                    </a>
                 </div>
             </div>
-            <!-- <a class="carousel-control-prev" href="#galeryCarousel" role="button" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a> -->
             <a class="carousel-control-next" href="#galeryCarousel" role="button" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </a>
