--- a/galeria/index.html
+++ b/galeria/index.html
@@ -6,95 +6,115 @@
     <title>Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../assets/css/galeria.css">
     <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="../assets/css/galeria.css">
 </head>
 <body>
-    <header class="container">
-        <img class="img-fluid" src="../assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
-    </header>
+    <nav class="navbar navbar-dark navbar-expand-md p-3">
+        <a href="../">
+            <h1 class="navbar-brand m-0" style="font-size: 2rem;">GALERIA</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a href="../">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../artista/">Sobre a artista</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../galeria/">Galeria</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <main class="mt-5 container">
         <!-- Card grid -->
         <div class="card-columns">
             <div class="card">
-                <a href="../obras/1/index.html"><img class="card-img-top" src="../assets/images/obra01.png" alt="Primeira obra da exposição"></a>
+                <a href="../obras/1"><img class="card-img-top" src="../assets/images/obra01.png" alt="Primeira obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/2/index.html"><img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição"></a>
+                <a href="../obras/2"><img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/3/index.html"><img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição"></a>
+                <a href="../obras/3"><img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/4/index.html"><img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição"></a>
+                <a href="../obras/4"><img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/5/index.html"><img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição"></a>
+                <a href="../obras/5"><img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/6/index.html"><img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição"></a>
+                <a href="../obras/6"><img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/7/index.html"><img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição"></a>
+                <a href="../obras/7"><img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição"></a>
             </div>
             <div class="card">
-                <a href="../obras/8/index.html"><img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição"></a>            </div>
+                <a href="../obras/8"><img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição"></a>            </div>
         </div>
         <!-- /Card grid -->
         <!-- Carousel -->
         <div id="galeryCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="../obras/1/index.html">
+                    <a href="../obras/1">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra01.png" alt="Primeira obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/2/index.html">
+                    <a href="../obras/2">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra02.png" alt="Segunda obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/3/index.html">
+                    <a href="../obras/3">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra03.png" alt="Terceira obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/4/index.html">
+                    <a href="../obras/4">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra04.png" alt="Quarta obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/5/index.html">
+                    <a href="../obras/5">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra05.png" alt="Quinta obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/6/index.html">
+                    <a href="../obras/6">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra06.png" alt="Sexta obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/7/index.html">
+                    <a href="../obras/7">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra07.png" alt="Sétima obra da exposição">
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="../obras/8/index.html">
+                    <a href="../obras/8">
                         <div class="card">
                             <img class="card-img-top" src="../assets/images/obra08.png" alt="Oitava obra da exposição">
                         </div>
@@ -109,6 +129,7 @@
     </main>
     <footer class="container mt-auto">
         <!--Patrocínios -->
+        <img class="img-fluid" src="../assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
     </footer>
 </body>
 </html>
