Fix home page hyperlinks paths

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="vh-100 d-flex flex-column">
     <nav class="navbar navbar-dark navbar-expand-md p-3">
-        <a href="../">
+        <a href="./">
             <h1 class="navbar-brand m-0" style="font-size: 2rem;">WELCOME?</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="../">Home</a>
+                    <a href="./">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../artista/">Sobre a artista</a>
+                    <a href="./artista/">Sobre a artista</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../galeria/">Galeria</a>
+                    <a href="./galeria/">Galeria</a>
                 </li>
             </ul>
         </div>
