Add videoart to galery page

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -173,11 +173,49 @@
             </a>
         </div>
         <!-- /Carousel -->
-        <!-- <h1>VIDEOARTES</h1> -->
+        <h1 class="mt-5">VIDEOARTES</h1>
         <!-- Card grid -->
+        <div class="card-columns">
+            <div class="card">
+                <a href="../videoarte"><img class="card-img-top" src="../assets/images/videoarte01.png" alt="Primeira imagem da videoarte"></a>
+                <div class="card-text">
+                    O conceito de ego, superego e id na teoria psicanalítica de Sigmund Freud, representando diferentes aspectos da psique humana é central para entendermos a videoarte.               </div>
+                <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
+            </div>
+            <div class="card">
+                <a href="../obras/2"><img class="card-img-top" src="../assets/images/videoarte02.png" alt="Segunda obra da exposição"></a>
+                <div class="card-text">
+                    FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine a instância psíquica como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Esse embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.
+                </div>
+                <a href="./obras/2" class="see-more mt-3">VER MAIS</a>
+            </div>
+        </div>
         <!-- /Card grid -->
 
         <!-- Carousel -->
+        <div id="videoarteCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/videoarte01.png" alt="Primeira imagem da videoarte">
+                        <div class="card-text">
+                            O conceito de ego, superego e id na teoria psicanalítica de Sigmund Freud, representando diferentes aspectos da psique humana é central para entendermos a videoarte.               </div>
+                        <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card">
+                        <img class="card-img-top" src="../assets/images/videoarte02.png" alt="Segunda imagem da videoarte">
+                        <div class="card-text">
+                            FEMMINA navega por conflitos internos relacionados à sua identidade de gênero. Imagine a instância psíquica como um cenário intrigante e complexo, onde reside uma médica e uma monstra. A médica representa a parte racional, controlada e ética de FEMMINA, enquanto a monstra personifica os desejos, impulsos e instintos mais primitivos. Conforme FEMMINA explora sua identidade travesti, a médica e a monstra começam a confrontar-se em sua mente. Esse embate interno se intensifica à medida que FEMMINA se envolve em atividades que a conectam mais profundamente com sua verdadeira identidade.
+                        </div>
+                        <a href="../videoarte" class="see-more mt-3">VER MAIS</a>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-next" href="#videoarteCarousel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
         <!-- /Carousel -->
     </main>
     <footer class="mt-auto">
