--- a/galeria/index.html
+++ b/galeria/index.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a href="../galeria/">Galeria</a>
                 </li>
+                <li class="nav-item">
+                    <a href="../videoarte/">Videoarte</a>
+                </li>
             </ul>
         </div>
     </nav>
