--- a/obras/1/index.html
+++ b/obras/1/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-md p-3 sticky-top">
-        <a href="./">
+        <a href="../../">
             <h1 class="navbar-brand m-0">ENTRE FIOS&TRAMAS<br><span>TRANS</span>GRESSOES DE GENERO</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
@@ -26,6 +26,9 @@
                 </li>
                 <li class="nav-item">
                     <a href="../../galeria/">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a href="../../videoarte/">Videoarte</a>
                 </li>
             </ul>
         </div>
