Fix videoart see more paths

--- a/videoarte/index.html
+++ b/videoarte/index.html
@@ -55,7 +55,7 @@
         <section class="container">
             <h2>VER OUTRAS OBRAS</h2>
             <div id="other-works" class="card-columns"></div>
-            <script src="../obras/index.js" current="0"></script>
+            <script src="index.js" current="0"></script>
         </section>
     </main>
     <footer class="mt-auto">
