--- a/instalacao/index.html
+++ b/instalacao/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>Instalação</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/index.css">
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../assets/css/videoarte.css">
 </head>
-<body>
+<body class="d-flex flex-column vh-100">
     <nav class="navbar navbar-dark navbar-expand-md p-3">
         <a href="../">
             <h1 class="navbar-brand m-0" style="font-size: 2rem;">INSTALACAO</h1>
@@ -34,6 +34,22 @@
         </div>
     </nav>
     <main>
+        <div class="container">
+            <h1 style="color: var(--highlight-text);">ESSA PÁGINA AINDA NÃO ESTÁ DISPONÍVEL</h1>
+            <h4 style="color: var(--text-color);">Por favor volte mais tarde</h4>
+            <!-- back button -->
+            <button onclick="back()" style="background-color: var(--dark-background); color: white;" class="btn mt-5">Voltar</button>
+        </div>
+        <script>
+            function back() {
+                window.history.back();
+            }
+        </script>
     </main>
+    <footer class="mt-auto">
+        <div class="container">
+            <img class="img-fluid" src="../assets/images/logo-horozintal-1.jpg" alt="Logo da farm-precisa ser">
+        </div>
+    </footer>
 </body>
 </html>
