Fix responsivity for home page and galery

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </section>
     <nav id="home" class="navbar navbar-dark navbar-expand-md p-3 sticky-top">
         <a href="./">
-            <h1 class="navbar-brand m-0">ENTRE FIOS&TRAMAS<br><span>TRANS</span>GRESSOES DE GENERO</h1>
+            <h1 style="font-size: .9rem;" class="m-0 d-block d-lg-none">ENTRE FIOS&TRAMAS<br><span><span style="color: var(--text-color);">TRANS</span>GRESSOES DE GENERO</span></h1>
+            <h1 class="m-0 d-none d-lg-block fs-3">ENTRE FIOS&TRAMAS<br><span style="color: var(--text-color);">TRANS</span>GRESSOES DE GENERO</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
             <span class="navbar-toggler-icon"></span>
@@ -91,9 +92,9 @@
                         <p>Tecendo seu "mundo rosa" de maneira consciente e deliberada, a artista contribui para a ampliação do entendimento coletivo sobre as diversas expressões de feminilidade. Essa abordagem desafia a dicotomia tradicional entre masculino e feminino, destacando a fluidez e complexidade. Assim, sua prática artística não apenas é uma expressão individual, mas também um catalisador para a evolução do discurso social em torno da diversidade de identidades de gênero, impactando positivamente a conscientização coletiva.</p>
             </section>
         </article>
-        <div class="row mb-5 justify-content-center">
-            <div class="col-3"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
-            <div class="col-3"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
+        <div class="row my-5 justify-content-center gap-5">
+            <div class="col-lg-3"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
+            <div class="col-lg-3"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
         </div>
     </main>
     <footer class="mt-auto">
