--- a/galeria/index.html
+++ b/galeria/index.html
@@ -197,7 +197,8 @@
                 </div>
             </div>
             <div class='embed-container container'>
-                <iframe src='' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                O vídeo ainda não está disponível
+                <iframe src='' alt="Videoarte" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
         </section>
     </main>
