Add link for catálogo

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </article>
         <div class="row my-5 justify-content-center gap-3">
             <div class="col-lg-3 d-flex flex-column align-items-center"><a href="./galeria/" class="see-work">VER OBRAS</a></div>
-            <div class="col-lg-3 d-flex flex-column align-items-center"><a href="./instalacao/" class="see-work">INSTALAÇÃO</a></div>
+            <div class="col-lg-3 d-flex flex-column align-items-center"><a href="https://drive.google.com/drive/folders/1txvhPrGfUwHcXNLWwQtK2rKZBX9Nebk8?usp=drive_link" target="_blank" class="see-work">BAIXAR CATÁLOGO</a></div>
         </div>
     </main>
     <footer class="mt-auto">
